# TIMP-MSHG

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  auth_reg_form.cpp  auth_reg_form.h  cellbutton.h  client_singleton.cpp  client_singleton.h  func2client.cpp  func2client.h  game_form.cpp  game_form.h  main.cpp  manager_form.cpp  manager_form.h  top10_form.cpp  top10_form.h
common/: CMakeLists.txt  protocol.cpp  protocol.h  securityutils.cpp  securityutils.h
core/: CMakeLists.txt  gamesaper.cpp  gamesaper.h
server/: CMakeLists.txt  dbsingleton.cpp  dbsingleton.h  echoserver.cpp  echoserver.h  func2serv.cpp  func2serv.h  main.cpp
