cmake_minimum_required(VERSION 3.16)
project(SaperOnline LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Network Sql Widgets)

add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(server)
add_subdirectory(client)
